Add Dashboard entity including all infrastructure to display on the web page
