# src/Core/Application/DTOs/Dashboard/DashboardDto.cs
@@ -1,0 +1,7 @@
+namespace Numployable.Application.DTOs.Dashboard;
+
+public class DashboardDto
+{
+    public int TotalCount { get; set; }
+}
+
