# src/Core/Application/Features/Dashboard/Requests/Queries/GetDashboardRequest.cs
@@ -1,0 +1,8 @@
+namespace Numployable.Application.Features.Dashboard.Requests.Queries;
+
+using MediatR;
+using Numployable.Application.DTOs.Dashboard;
+
+public class GetDashboardRequest : IRequest<DashboardDto>
+{
+}
